--- a/projects/Final Project/Home.html
+++ b/projects/Final Project/Home.html
@@ -17,7 +17,7 @@
 
             <ul>
                 <li><a href="MyProjects.html" target="_blank">My Projects</a> &#128640;</li>
-                <li><a href="ContactUs.html" target="_blank">Contact Us! </a> &#128153;</li>
+                <li><a href="ContactMe.html" target="_blank">Contact Me! </a> &#128153;</li>
 
             </ul>
 
