--- a/projects/Final Project/MyProjects.html
+++ b/projects/Final Project/MyProjects.html
@@ -17,7 +17,7 @@
         <nav>
             <ul>
                 <li><a href="Home.html" target="_blank">Home</a> &#127968;</li>
-                <li><a href="ContactUs.html" target="_blank">Contact Us!</a> &#128153;</li>
+                <li><a href="ContactMe.html" target="_blank">Contact Me!</a> &#128153;</li>
             </ul>
         </nav>
         <hr>
