--- a/assignments/Pop-quiz/page_2.html
+++ b/assignments/Pop-quiz/page_2.html
@@ -15,145 +15,119 @@
 
 
 <body>
-    <header>
-        <h1>Questions-Page 2</h1>
-    </header>
-    <main>
-        <ol start="11">
-            <section>
-                <li id="q11">What type of food holds the world record for being the most stolen around the globe? <a
-                        href="answers.html#a11">Check Answer</a>
-                    <ol type="A">
-                        <li>Wagyu beef</li>
-                        <li>Cheese</li>
-                        <li>Coffe</li>
-                        <li>Chocolate</li>
-                    </ol>
-                </li>
-            </section>
-            <br>
-            <section>
-                <li id="q12">What element does the chemical symbol Au stand for?<a href="answers.html#a12">Check
-                        Answer</a>
-                    <ol type="A">
-                        <li>Silver</li>
-                        <li>Magnesium</li>
-                        <li>Salt</li>
-                        <li>Gold </li>
-                    </ol>
-                </li>
-            </section>
-            <br>
-            <section>
+    <h1>Questions-Page 2</h1>
+    <ol start="11">
+        <li id="q11">What type of food holds the world record for being the most stolen around the globe? <a
+                href="answers.html#a11">Check Answer</a>
+            <ol type="A">
+                <li>Wagyu beef</li>
+                <li>Cheese</li>
+                <li>Coffe</li>
+                <li>Chocolate</li>
+            </ol>
+        </li>
+        <br>
+        <li id="q12">What element does the chemical symbol Au stand for?<a href="answers.html#a12">Check Answer</a>
+            <ol type="A">
+                <li>Silver</li>
+                <li>Magnesium</li>
+                <li>Salt</li>
+                <li>Gold </li>
+            </ol>
+        </li>
+        <br>
 
-                <li id="q13">What is the highest-grossing Broadway show of all time? <a href="answers.html#a13">Check
-                        Answer</a>
-                    <ol type="A">
-                        <li>The Lion King</li>
-                        <li>Wicked</li>
-                        <li>The Lovers</li>
-                        <li>The Lost Jockey </li>
-                    </ol>
-                </li>
-            </section>
-            <br>
-            <section>
-                <li id="q14">On average, how many seeds are located on the outside of a strawberry? <a
-                        href="answers.html#a14">Check Answer</a>
-                    <ol type="A">
-                        <li>100</li>
-                        <li>200</li>
-                        <li>400</li>
-                        <li>500</li>
-                    </ol>
-                </li>
-            </section>
-            <br>
-            <section>
-                <li id="q15">Which fast food restaurant has the largest number of retail locations in the world? <a
-                        href="answers.html#a15">Check Answer</a>
-                    <ol type="A">
-                        <li>Jack In The Box</li>
-                        <li>Chipotle</li>
-                        <li>Subway</li>
-                        <li>McDonald&apos;s</li>
+        <li id="q13">What is the highest-grossing Broadway show of all time? <a href="answers.html#a13">Check Answer</a>
+            <ol type="A">
+                <li>The Lion King</li>
+                <li>Wicked</li>
+                <li>The Lovers</li>
+                <li>The Lost Jockey </li>
+            </ol>
+        </li>
+        <br>
+        <li id="q14">On average, how many seeds are located on the outside of a strawberry? <a
+                href="answers.html#a14">Check Answer</a>
+            <ol type="A">
+                <li>100</li>
+                <li>200</li>
+                <li>400</li>
+                <li>500</li>
+            </ol>
+        </li>
+        <br>
+        <li id="q15">Which fast food restaurant has the largest number of retail locations in the world? <a
+                href="answers.html#a15">Check Answer</a>
+            <ol type="A">
+                <li>Jack In The Box</li>
+                <li>Chipotle</li>
+                <li>Subway</li>
+                <li>McDonald&apos;s</li>
 
-                    </ol>
+            </ol>
+        </li>
+        <br>
 
-                </li>
-            </section>
-            <br>
-            <section>
-                <li id="q16">Where is recognized as the location of the hottest temperature ever recorded on Earth? <a
-                        href="answers.html#a16">Check Answer</a>
-                    <ol type="A">
-                        <li>Mitribah, Kuwait</li>
-                        <li>Death Valley, California</li>
-                        <li>Yuma, Arizona</li>
-                        <li>Key West, Florida</li>
-                    </ol>
-                </li>
-            </section>
-            <br>
-            <section>
-                <li id="q17">What is the oldest soft drink in the United States?<a href="answers.html#a17">Check
-                        Answer</a>
-                    <ol type="A">
-                        <li>Coca Cola</li>
-                        <li>Pepsi</li>
-                        <li>Dr.Pepper</li>
-                        <li>Canada Dry Ginger Ale</li>
+        <li id="q16">Where is recognized as the location of the hottest temperature ever recorded on Earth? <a
+                href="answers.html#a16">Check Answer</a>
+            <ol type="A">
+                <li>Mitribah, Kuwait</li>
+                <li>Death Valley, California</li>
+                <li>Yuma, Arizona</li>
+                <li>Key West, Florida</li>
+            </ol>
+        </li>
+        <br>
 
-                    </ol>
-                </li>
-            </section>
-            <br>
-            </ection>
-            <li id="q18"> What river passes through New Orleans, Louisiana?<a href="answers.html#a18">Check
-                    Answer</a>
-                <ol type="A">
-                    <li>Orleans River</li>
-                    <li>Mississippi River</li>
-                    <li>Atchafalaya River</li>
-                    <li>Colorado River</li>
-                </ol>
-            </li>
-            </section>
-            <br>
-            <section>
+        <li id="q17">What is the oldest soft drink in the United States?<a href="answers.html#a17">Check Answer</a>
+            <ol type="A">
+                <li>Coca Cola</li>
+                <li>Pepsi</li>
+                <li>Dr.Pepper</li>
+                <li>Canada Dry Ginger Ale</li>
 
-                <li id="q19">In what country do more than half of people believe in elves?<a
-                        href="answers.html#a19">Check
-                        Answer</a>
-                    <ol type="A">
-                        <li>Norway</li>
-                        <li>Russia</li>
-                        <li>Holland</li>
-                        <li>Iceland</li>
-                    </ol>
-                </li>
-            </section>
-            <br>
-            <section>
+            </ol>
+        </li>
+        <br>
 
-                <li id="q20">
-                    What is the name of the coffee shop in the sitcom Friends?<a href="answers.html#a20">Check
-                        Answer</a>
+        <li id="q18"> What river passes through New Orleans, Louisiana?<a href="answers.html#a18">Check
+                Answer</a>
+            <ol type="A">
+                <li>Orleans River</li>
+                <li>Mississippi River</li>
+                <li>Atchafalaya River</li>
+                <li>Colorado River</li>
+            </ol>
+        </li>
+        <br>
 
-                    <ol type="A">
-                        <li>Central Park</li>
-                        <li>Java Park</li>
-                        <li>Central Park Coffee</li>
-                        <li>Central Park Roastery</li>
-                    </ol>
-                </li>
-            </section>
-        </ol>
-    </main>
-    <footer>
-        <a href="page_1.html">Previous Page</a> |
-        <a href="page_3.html">Next Page</a>
-    </footer>
+        <li id="q19">In what country do more than half of people believe in elves?<a href="answers.html#a19">Check
+                Answer</a>
+            <ol type="A">
+                <li>Norway</li>
+                <li>Russia</li>
+                <li>Holland</li>
+                <li>Iceland</li>
+            </ol>
+        </li>
+        <br>
+
+        <li id="q20">
+            What is the name of the coffee shop in the sitcom Friends?<a href="answers.html#a20">Check Answer</a>
+
+            <ol type="A">
+                <li>Central Park</li>
+                <li>Java Park</li>
+                <li>Central Park Coffee</li>
+                <li>Central Park Roastery</li>
+            </ol>
+        </li>
+    </ol>
+
+
+    <a href="page_1.html">Previous Page</a> |
+    <a href="page_3.html">Next Page</a>
+
 </body>
 
 </html>
