--- a/assignments/Pop-quiz/page_3.html
+++ b/assignments/Pop-quiz/page_3.html
@@ -14,138 +14,116 @@
 </head>
 
 <body>
-    <header>
 
-        <h1>Questions-Page 3</h1>
-    </header>
-    <main>
-        <ol start="21">
-            <section>
-                <li id="q21">Which pop star burnt down her home gym with candles? <a href="answers.html#a21">Check
-                        Answer</a>
-                    <ol type="A">
-                        <li>Kim Kardashian</li>
-                        <li>Lady Gaga</li>
-                        <li>Zendaya</li>
-                        <li>Britney Spears</li>
-                    </ol>
-                </li>
-            </section>
-            <br>
-            <section>
-                <li id="q22">What is the highest-grossing video game franchise to date?<a href="answers.html#a22">Check
-                        Answer</a>
-                    <ol type="A">
-                        <li>Mario</li>
-                        <li>Pokemon</li>
-                        <li>Call of Duty</li>
-                        <li>Street Fighter</li>
-                    </ol>
-                </li>
-            </section>
-            <br>
-            <section>
-                <li id="q23">“Cirque du Soleil” started in what country? <a href="answers.html#a23">Check Answer</a>
-                    <ol type="A">
-                        <li>France</li>
-                        <li>USA</li>
-                        <li>Canada</li>
-                        <li>Russia</li>
-                    </ol>
-                </li>
-            </section>
-            <br>
-            <section>
-                <li id="q24">Which country&apos;s national animal is a unicorn? <a href="answers.html#a24">Check
-                        Answer</a>
-                    <ol type="A">
-                        <li>Scotland</li>
-                        <li>Denmark</li>
-                        <li>New Zealand</li>
-                        <li>France</li>
-                    </ol>
-                </li>
-            </section>
-            <br>
-            <section>
-                <li id="q25">What are the two highest-grossing films of all time? <a href="answers.html#a25">Check
-                        Answer</a>
-                    <ol type="A">
-                        <li>Avengers: End Game and Star Wars: Episode VII &mdash;The Force Awakens</li>
-                        <li>Avatar and Avengers: End Game</li>
-                        <li>Avengers: Infinity War and Titanic</li>
-                        <li>Furious 7 and Avatar</li>
+    <h1>Questions-Page 3</h1>
+    <ol start="21">
+        <li id="q21">Which pop star burnt down her home gym with candles? <a href="answers.html#a21">Check Answer</a>
+            <ol type="A">
+                <li>Kim Kardashian</li>
+                <li>Lady Gaga</li>
+                <li>Zendaya</li>
+                <li>Britney Spears</li>
+            </ol>
+        </li>
+        <br>
+        <li id="q22">What is the highest-grossing video game franchise to date?<a href="answers.html#a22">Check
+                Answer</a>
+            <ol type="A">
+                <li>Mario</li>
+                <li>Pokemon</li>
+                <li>Call of Duty</li>
+                <li>Street Fighter</li>
+            </ol>
+        </li>
+        <br>
 
-                    </ol>
-                </li>
-            </section>
-            <br>
-            <section>
-                <li id="q26">Which Avenger other than Captain America was able to pick up Thor&apos;s Mjolnir in the
-                    Marvel
-                    movies? <a href="answers.html#a26">Check Answer</a>
-                    <ol type="A">
-                        <li>Wanda</li>
-                        <li>Spiderman</li>
-                        <li>Doctor Strange</li>
-                        <li>Vision</li>
-                    </ol>
-                </li>
-            </section>
-            <br>
-            <section>
+        <li id="q23">“Cirque du Soleil” started in what country? <a href="answers.html#a23">Check Answer</a>
+            <ol type="A">
+                <li>France</li>
+                <li>USA</li>
+                <li>Canada</li>
+                <li>Russia</li>
+            </ol>
+        </li>
+        <br>
+        <li id="q24">Which country&apos;s national animal is a unicorn? <a href="answers.html#a24">Check Answer</a>
+            <ol type="A">
+                <li>Scotland</li>
+                <li>Denmark</li>
+                <li>New Zealand</li>
+                <li>France</li>
+            </ol>
+        </li>
+        <br>
+        <li id="q25">What are the two highest-grossing films of all time? <a href="answers.html#a25">Check Answer</a>
+            <ol type="A">
+                <li>Avengers: End Game and Star Wars: Episode VII &mdash;The Force Awakens</li>
+                <li>Avatar and Avengers: End Game</li>
+                <li>Avengers: Infinity War and Titanic</li>
+                <li>Furious 7 and Avatar</li>
 
-                <li id="q27">What is the main ingredient in a falafel?<a href="answers.html#a27">Check Answer</a>
-                    <ol type="A">
-                        <li>Lentil</li>
-                        <li>Chickpea</li>
-                        <li>Broccoli</li>
-                        <li>Split pea</li>
+            </ol>
+        </li>
+        <br>
 
-                    </ol>
-                </li>
-            </section>
-            <br>
-            <section>
-                <li id="q28"> What color dresses do Chinese women traditionally wear on their wedding day?<a
-                        href="answers.html#a28">Check
-                        Answer</a>
-                    <ol type="A">
-                        <li>Blue</li>
-                        <li>Gold</li>
-                        <li>White</li>
-                        <li>Red</li>
-                    </ol>
-                </li>
-            </section>
-            <br>
-            <section>
-                <li id="q29">What is yellowtail fish called in Japanese?<a href="answers.html#a29">Check
-                        Answer</a>
-                    <ol type="A">
-                        <li>Ahi</li>
-                        <li>Ikura</li>
-                        <li>Hamachi</li>
-                        <li>Maguro</li>
-                    </ol>
-                </li>
-            </section>
-            <br>
-            <section>
-                <li id="q30"> What sport has been played on the moon?<a href="answers.html#a30">Check Answer</a>
+        <li id="q26">Which Avenger other than Captain America was able to pick up Thor&apos;s Mjolnir in the Marvel
+            movies? <a href="answers.html#a26">Check Answer</a>
+            <ol type="A">
+                <li>Wanda</li>
+                <li>Spiderman</li>
+                <li>Doctor Strange</li>
+                <li>Vision</li>
+            </ol>
+        </li>
+        <br>
 
-                    <ol type="A">
-                        <li>Frisbee</li>
-                        <li>Soccer</li>
-                        <li>Golf</li>
-                        <li>Bocce ball</li>
-                    </ol>
-                </li>
-            </section>
-        </ol>
-    </main>
+        <li id="q27">What is the main ingredient in a falafel?<a href="answers.html#a27">Check Answer</a>
+            <ol type="A">
+                <li>Lentil</li>
+                <li>Chickpea</li>
+                <li>Broccoli</li>
+                <li>Split pea</li>
 
-    <footer><a href="page_2.html">Previous Page</a></footer>
+            </ol>
+        </li>
+        <br>
+
+        <li id="q28"> What color dresses do Chinese women traditionally wear on their wedding day?<a
+                href="answers.html#a28">Check
+                Answer</a>
+            <ol type="A">
+                <li>Blue</li>
+                <li>Gold</li>
+                <li>White</li>
+                <li>Red</li>
+            </ol>
+        </li>
+        <br>
+
+        <li id="q29">What is yellowtail fish called in Japanese?<a href="answers.html#a29">Check
+                Answer</a>
+            <ol type="A">
+                <li>Ahi</li>
+                <li>Ikura</li>
+                <li>Hamachi</li>
+                <li>Maguro</li>
+            </ol>
+        </li>
+        <br>
+
+        <li id="q30"> What sport has been played on the moon?<a href="answers.html#a30">Check Answer</a>
+
+            <ol type="A">
+                <li>Frisbee</li>
+                <li>Soccer</li>
+                <li>Golf</li>
+                <li>Bocce ball</li>
+            </ol>
+        </li>
+    </ol>
+
+
+    <a href="page_2.html">Previous Page</a>
 </body>
 
 </html>
