--- a/projects/Final Project/Home.html
+++ b/projects/Final Project/Home.html
@@ -28,16 +28,17 @@
     <main>
         <section>
             <h2>Who is <ins>Rinesa Zylfiu?</ins> </h2>
-            
+
             <figure> <img src="images/girl.webp" alt="RinesaZylfiu" title="Rinesa Zylfiu" width="40%"></figure>
 
             <p>
                 My name is Rinesa Zylfiu and I am currently studying Computer Science and Engineering.
                 I am 21 years old, I live in the city of Gjilan.
                 I am passionate about technology and the limitless possibilities it offers.
-                Through my studies, I strive to gain knowledge and skills that will enable me to contribute to the ever-evolving field of Computer Science.
+                Through my studies, I strive to gain knowledge and skills that will enable me to contribute to the
+                ever-evolving field of Computer Science.
             </p>
-        
+
         </section>
         <section>
             <h2>Education</h2>
@@ -51,7 +52,8 @@
                 <li>High School: <b>Xhavit Ahmeti</b>(2018-2021)</li>
                 <li>University:
                     <ul>
-                        <li>Bachelos`s degree in <b>Computer Science</b> from the <em>University of Bussines and Technoology</em>(2021-2024)</li>
+                        <li>Bachelos`s degree in <b>Computer Science</b> from the <em>University of Bussines and
+                                Technoology</em>(2021-2024)</li>
                     </ul>
                 </li>
             </ul>
