My Local Bussines

--- a/assignments/My Local Business/myLocalBusiness.html
+++ b/assignments/My Local Business/myLocalBusiness.html
@@ -73,14 +73,14 @@
                 </b></center>
         </section>
     </main>
-    <footer>
+    <section>
         <h3>You can find us here</h3>
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2890.765799737038!2d21.482048921990557!3d42.470395960280975!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2s!4v1707430047483!5m2!1sen!2s"
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"></iframe>
-    </footer>
-
+    </section>
+    <footer>All rights reserved Rinesa Zylfiu</footer>
 
 </body>
 
