--- a/assignments/My Local Business/myLocalBusiness.html
+++ b/assignments/My Local Business/myLocalBusiness.html
@@ -18,7 +18,7 @@
         <hr>
     </header>
     <main>
-
+<section>
         <figure><img src="images/fresh.jpeg" alt="" width="100%"></figure>
         <article>
             <p>The fruits shop BEKA, established in 2006, has become a beloved establishment in Kosova Gjilan, offering
@@ -56,6 +56,7 @@
                 to promoting healthy eating habits.
             </p>
         </article>
+    </section>
         <figure><img src="images/Fruits.jpeg" alt="" width="30%">
             <img src="images/Veggies.jpeg" alt="" width="30%">
             <img src="images/DryFruits.jpeg" alt="" width="30%">
