--- a/assignments/Favorite Celebrity/FavoriteCelebrity.html
+++ b/assignments/Favorite Celebrity/FavoriteCelebrity.html
@@ -97,60 +97,62 @@
         </center>
 
         <section>
+            <article>
+                <ins>
+                    <h2>Life</h2>
+                </ins>
 
-            <ins>
-                <h2>Life</h2>
-            </ins>
-
-            <p>Selena Marie Gomez was born on July 22, 1992, in Grand Prairie, Texas.
-                American actress and singer who won legions of young fans as the winsome star of the Disney
-                television series Wizards of Waverly Place (2007-12) and as a pop vocalist.
-                Inspired by her mother, an amateur actress, Gomez tried out for a role on the PBS children s
-                television
-                series
-                Barney &
-                Friends and, as a result, appeared regularly on the program in 2002-04. After making her big-screen
-                debut in
-                the
-                family movie Spy Kids 3-D: Game Over (2003), she auditioned for the Disney Channel, which eventually
-                led
-                to
-                a
-                guest spot on the TV series The Suite Life of Zack and Cody. In 2007 Gomez was cast as Alex Russo, a
-                mischievous
-                tomboy with magical powers, on a new Disney sitcom, Wizards of Waverly Place. The show, for which
-                she
-                also
-                sang
-                the theme song, became an instant hit among the preteen set, and she earned favourable comparisons
-                to
-                the
-                channel&apos;s leading ingenue, Miley Cyrus.
-            </p>
+                <p>Selena Marie Gomez was born on July 22, 1992, in Grand Prairie, Texas.
+                    American actress and singer who won legions of young fans as the winsome star of the Disney
+                    television series Wizards of Waverly Place (2007-12) and as a pop vocalist.
+                    Inspired by her mother, an amateur actress, Gomez tried out for a role on the PBS children s
+                    television
+                    series
+                    Barney &
+                    Friends and, as a result, appeared regularly on the program in 2002-04. After making her big-screen
+                    debut in
+                    the
+                    family movie Spy Kids 3-D: Game Over (2003), she auditioned for the Disney Channel, which eventually
+                    led
+                    to
+                    a
+                    guest spot on the TV series The Suite Life of Zack and Cody. In 2007 Gomez was cast as Alex Russo, a
+                    mischievous
+                    tomboy with magical powers, on a new Disney sitcom, Wizards of Waverly Place. The show, for which
+                    she
+                    also
+                    sang
+                    the theme song, became an instant hit among the preteen set, and she earned favourable comparisons
+                    to
+                    the
+                    channel&apos;s leading ingenue, Miley Cyrus.
+                </p>
+            </article>
         </section>
         <section>
+            <article>
+                <h3>Personal life</h3>
 
-            <h3>Personal life</h3>
-
-            <p> In 2014, she disclosed her diagnosis of lupus, an autoimmune disease that affects various parts of
-                the body.
-                This revelation led her to take a hiatus from her career to focus on her health. During this time,
-                she
-                received a kidney transplant from her close friend, Francia Raisa, which further emphasized the
-                importance
-                of her personal relationships and support system.
-                In addition to her health struggles, Gomez has been vocal about her mental health issues, including
-                anxiety
-                and depression.
-                Despite the hurdles she has faced, Gomez continues to work on her acting projects, collaborate with
-                various
-                artists, and produce content for her production company, July Moon Productions.
-                Selena Gomez's personal life serves as a reminder that even those in the spotlight face their own
-                unique
-                challenges. Through her openness, she has become an inspiration to many, encouraging others to
-                prioritize
-                their wellbeing, seek help when needed, and embrace their own authenticity.
-            </p>
+                <p> In 2014, she disclosed her diagnosis of lupus, an autoimmune disease that affects various parts of
+                    the body.
+                    This revelation led her to take a hiatus from her career to focus on her health. During this time,
+                    she
+                    received a kidney transplant from her close friend, Francia Raisa, which further emphasized the
+                    importance
+                    of her personal relationships and support system.
+                    In addition to her health struggles, Gomez has been vocal about her mental health issues, including
+                    anxiety
+                    and depression.
+                    Despite the hurdles she has faced, Gomez continues to work on her acting projects, collaborate with
+                    various
+                    artists, and produce content for her production company, July Moon Productions.
+                    Selena Gomez's personal life serves as a reminder that even those in the spotlight face their own
+                    unique
+                    challenges. Through her openness, she has become an inspiration to many, encouraging others to
+                    prioritize
+                    their wellbeing, seek help when needed, and embrace their own authenticity.
+                </p>
+            </article>
         </section> <br>
         <section>
             <ul>
@@ -263,43 +265,44 @@
             </center>
         </section>
         <section>
-            <h3>Music Career</h3>
-            <p>Throughout her career, Gomez has consistently demonstrated her versatility as an artist,
-                collaborating
-                with a
-                range of producers and fellow musicians. Notably, her collaboration with DJ duo Zedd on the hit
-                single
-                "I
-                Want
-                You to Know" and her collaboration with Kygo on "It Ain't Me" earned her critical acclaim and
-                further
-                solidified
-                her place as a pop superstar.In addition to her solo career, Gomez has also contributed to various
-                movie
-                soundtracks, including hits like "Bad Liar" for the soundtrack of the Netflix series "13 Reasons
-                Why"
-                and
-                "We
-                Don't Talk Anymore" with Charlie Puth for the animated film "The Secret Life of Pets." This further
-                highlights
-                her ability to cater to different genres and audiences, showcasing her versatility and adaptability
-                as
-                an
-                artist.Selena Gomez's music career has been characterized by her ability to continually reinvent
-                herself
-                while
-                staying true to her unique artistic vision. Her honest and relatable lyrics, coupled with her
-                infectious
-                pop
-                melodies, have resonated with millions of fans worldwide, earning her numerous awards and accolades.
-                Gomez's
-                music not only showcases her immense talent but also serves as a testament to her growth and
-                resilience
-                as
-                an
-                artist, making her one of the most influential figures in the music industry today.</p>
-            <br>
-
+            <article>
+                <h3>Music Career</h3>
+                <p>Throughout her career, Gomez has consistently demonstrated her versatility as an artist,
+                    collaborating
+                    with a
+                    range of producers and fellow musicians. Notably, her collaboration with DJ duo Zedd on the hit
+                    single
+                    "I
+                    Want
+                    You to Know" and her collaboration with Kygo on "It Ain't Me" earned her critical acclaim and
+                    further
+                    solidified
+                    her place as a pop superstar.In addition to her solo career, Gomez has also contributed to various
+                    movie
+                    soundtracks, including hits like "Bad Liar" for the soundtrack of the Netflix series "13 Reasons
+                    Why"
+                    and
+                    "We
+                    Don't Talk Anymore" with Charlie Puth for the animated film "The Secret Life of Pets." This further
+                    highlights
+                    her ability to cater to different genres and audiences, showcasing her versatility and adaptability
+                    as
+                    an
+                    artist.Selena Gomez's music career has been characterized by her ability to continually reinvent
+                    herself
+                    while
+                    staying true to her unique artistic vision. Her honest and relatable lyrics, coupled with her
+                    infectious
+                    pop
+                    melodies, have resonated with millions of fans worldwide, earning her numerous awards and accolades.
+                    Gomez's
+                    music not only showcases her immense talent but also serves as a testament to her growth and
+                    resilience
+                    as
+                    an
+                    artist, making her one of the most influential figures in the music industry today.</p>
+                <br>
+            </article>
             <h4>Top 10 Selena Gomez Songs</h4>
             <ol>
                 <li>“Love You Like A Love Song”</li>
@@ -339,45 +342,47 @@
 
 
         <section>
-            <ins>
-                <h2>Rare Beauty</h2>
-            </ins>
+            <article>
+                <ins>
+                    <h2>Rare Beauty</h2>
+                </ins>
 
-            <p>
-                Rare Beauty is a makeup brand founded by Selena Gomez with a mission to redefine beauty standards
-                and
-                empower individuals to embrace their uniqueness. Selena wanted to create a brand that goes beyond
-                just
-                selling makeup products; she wanted to create a community that celebrates self-acceptance, mental
-                health,
-                and inclusivity.
+                <p>
+                    Rare Beauty is a makeup brand founded by Selena Gomez with a mission to redefine beauty standards
+                    and
+                    empower individuals to embrace their uniqueness. Selena wanted to create a brand that goes beyond
+                    just
+                    selling makeup products; she wanted to create a community that celebrates self-acceptance, mental
+                    health,
+                    and inclusivity.
 
-                One of the standout aspects of Rare Beauty is its commitment to inclusivity. They offer a wide range
-                of
-                shades for their foundation, concealer, and other complexion products, ensuring that everyone can
-                find a
-                perfect match for their skin tone. This inclusivity extends to their marketing campaigns as well,
-                featuring
-                models of diverse backgrounds and body types.
+                    One of the standout aspects of Rare Beauty is its commitment to inclusivity. They offer a wide range
+                    of
+                    shades for their foundation, concealer, and other complexion products, ensuring that everyone can
+                    find a
+                    perfect match for their skin tone. This inclusivity extends to their marketing campaigns as well,
+                    featuring
+                    models of diverse backgrounds and body types.
 
-                What sets Rare Beauty apart is its focus on mental health. Selena Gomez has been open about her own
-                struggles with mental health, and she wanted to create a brand that supports and uplifts others who
-                may
-                be
-                going through similar challenges. Rare Beauty has partnered with various organizations to provide
-                resources
-                and support for mental health initiatives, and a portion of their sales goes towards these efforts.
+                    What sets Rare Beauty apart is its focus on mental health. Selena Gomez has been open about her own
+                    struggles with mental health, and she wanted to create a brand that supports and uplifts others who
+                    may
+                    be
+                    going through similar challenges. Rare Beauty has partnered with various organizations to provide
+                    resources
+                    and support for mental health initiatives, and a portion of their sales goes towards these efforts.
 
 
-                What I personally love about Rare Beauty is their emphasis on the "no-makeup makeup" look. They
-                believe
-                in
-                enhancing your features rather than masking them, and their products are designed to provide a
-                natural,
-                effortless look. Whether you want a subtle glow or a more glam look, Rare Beauty has got you
-                covered.
+                    What I personally love about Rare Beauty is their emphasis on the "no-makeup makeup" look. They
+                    believe
+                    in
+                    enhancing your features rather than masking them, and their products are designed to provide a
+                    natural,
+                    effortless look. Whether you want a subtle glow or a more glam look, Rare Beauty has got you
+                    covered.
 
-            </p>
+                </p>
+            </article>
             <figure><img src="images/rarebeauty.webp" alt="" width="30%" style="float:right">
 
             </figure>
@@ -388,34 +393,37 @@
                 <img src="images/lipoilrare.webp" alt="Rare Cosmetics" title="Lipoil" width="20%">
                 <img src="images/gelrare.webp" alt="" title="Eyebrows gel" width="20%">
             </figure>
-        </section>
-        <section>
-            <em>
-                <h4>A quick note from Selena Gomez, founder and creator of Rare Beauty.</h4>
-            </em>
-            <em>
-                <p>Mental health is personal for me. Figuring out how to manage my own mental health hasn't always
-                    been
-                    easy, but it&apos;s something I am constantly working on and I hope I can help others work on, too.
+            <article>
+                <em>
+                    <h4>A quick note from Selena Gomez, founder and creator of Rare Beauty.</h4>
+                </em>
+                <em>
+                    <p>Mental health is personal for me. Figuring out how to manage my own mental health hasn't always
+                        been
+                        easy, but it&apos;s something I am constantly working on and I hope I can help others work on,
+                        too.
 
-                    Sometimes, my highs are really high, and my lows can take me out for weeks at a time. When I
-                    found
-                    out I suffer from mental health issues, in many ways it was a relief because I could better
-                    understand what&apos;s going on. I realized that there was a way to get help, and for me, that also
-                    meant
-                    finding the right treatments. Taking care of my mental health—just like my physical health—takes
-                    work, but when I do, I am happier, I am healthier, and more in control of my emotions and
-                    thoughts.
-                    I wish more people talked about mental health when I was younger so I could have learned and
-                    understood what was going on with my own health earlier on.
+                        Sometimes, my highs are really high, and my lows can take me out for weeks at a time. When I
+                        found
+                        out I suffer from mental health issues, in many ways it was a relief because I could better
+                        understand what&apos;s going on. I realized that there was a way to get help, and for me, that
+                        also
+                        meant
+                        finding the right treatments. Taking care of my mental health—just like my physical health—takes
+                        work, but when I do, I am happier, I am healthier, and more in control of my emotions and
+                        thoughts.
+                        I wish more people talked about mental health when I was younger so I could have learned and
+                        understood what was going on with my own health earlier on.
 
-                    That&apos;s why I launched Rare Impact and the Rare Impact Fund. I hope by sharing my own story and
-                    using
-                    my brand and platform to talk about and connect more people to resources that support their
-                    mental
-                    health, I can encourage others to get the help they need and bring more mental health services
-                    to
-                    educational settings.</p>
+                        That&apos;s why I launched Rare Impact and the Rare Impact Fund. I hope by sharing my own story
+                        and
+                        using
+                        my brand and platform to talk about and connect more people to resources that support their
+                        mental
+                        health, I can encourage others to get the help they need and bring more mental health services
+                        to
+                        educational settings.</p>
+            </article>
             </em>
         </section>
 
