--- a/projects/Final Project/MyProjects.html
+++ b/projects/Final Project/MyProjects.html
@@ -25,6 +25,7 @@
 
     <main>
         <section>
+            <article>
             <h2 id="p1">Project 1</h2>
             <p>Welcome to the world of Apple! Discover the innovative technology, sleek designs, and user-friendly
                 interfaces that have made Apple a leader in the tech industry. From the iconic iPhone to the powerful
@@ -32,18 +33,22 @@
                 computers, Apple products are known for their seamless integration and exceptional performance. Explore
                 the
                 wide range of apps, services, and accessories that enhance the Apple experience. </p>
+            </article>
             <figure><img src="images/project1.png" alt="Apple" title="Project 1" width="40%"></figure>
         </section>
         <section>
+        <article>
             <h2 id="p2">Project 2</h2>
             <p>This project showcases a simple and user-friendly login form that allows users to securely access their
                 accounts. With this form, users can enter their username or email and password to log in and gain access
                 to
                 the protected content of a website or application. The form is designed to be intuitive and easy to use,
                 ensuring a seamless login experience for users.</p>
+            </article>
             <figure><img src="images/project 2.png" alt="Login" title="Project 2" width="40%"></figure>
         </section>
         <section>
+        <article>
             <h2 id="p3">Project 3</h2>
             <p>In this HTML project, I've created a tribute to my favorite celebrity, Selena Gomez. Explore her
                 incredible
@@ -51,6 +56,7 @@
                 the
                 positive impact she's made in the world. From her chart-topping hits to her empowering messages, Selena
                 Gomez continues to captivate hearts worldwide.</p>
+            </article>
             <figure><img src="images/project3.png" alt="SelenaGomez" title="Project 3" width="40%"></figure>
         </section>
     </main>
