--- a/assignments/Hello CSS/index.html
+++ b/assignments/Hello CSS/index.html
@@ -8,7 +8,9 @@
 </head>
 
 <body>
-    <h1 style="background-color: violet ; color: purple;">Hello CSS!</h1>
+    <header>
+        <h1 style="background-color: violet ; color: purple;">Hello CSS!</h1>
+    </header>
 </body>
 
 </html>
