--- a/assignments/External CSS /externalcss.html
+++ b/assignments/External CSS /externalcss.html
@@ -10,23 +10,43 @@
 </head>
 
 <body>
-    <h1>I'm a heading</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro soluta libero accusantium aliquam ullam
-        similique. Ab amet voluptatibus labore ullam neque adipisci ipsam exercitationem culpa. Voluptas deserunt
-        expedita impedit obcaecati.</p>
-    <h2>I am a subheading</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe earum commodi molestias excepturi, quia ex atque
-        nihil cupiditate asperiores pariatur accusantium repellendus molestiae aspernatur nisi corporis architecto
-        minima non repudiandae?</p>
-    <h2>I am another subheading</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore vitae placeat accusamus sapiente, laboriosam
-        aspernatur ullam odit corrupti dolor neque dignissimos quaerat repudiandae molestias officiis distinctio
-        consequatur labore debitis nobis!</p>
-    <h1>I'm another heading</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, pariatur? Suscipit asperiores id enim nobis
-        recusandae laborum tempore minus nesciunt maxime adipisci eos reprehenderit assumenda, repudiandae quaerat
-        obcaecati ipsa autem hic in temporibus ipsam quod! Quisquam vel amet, iste ipsum at ullam doloribus quasi,
-        provident rem maxime delectus cupiditate fuga.</p>
+    <header>
+        <h1>I'm a heading</h1>
+    </header>
+    <main>
+        <section>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro soluta libero accusantium aliquam ullam
+                similique. Ab amet voluptatibus labore ullam neque adipisci ipsam exercitationem culpa. Voluptas
+                deserunt
+                expedita impedit obcaecati.</p>
+        </section>
+        <section>
+            <h2>I am a subheading</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe earum commodi molestias excepturi, quia ex
+                atque
+                nihil cupiditate asperiores pariatur accusantium repellendus molestiae aspernatur nisi corporis
+                architecto
+                minima non repudiandae?</p>
+        </section>
+        <section>
+            <h2>I am another subheading</h2>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore vitae placeat accusamus sapiente,
+                laboriosam
+                aspernatur ullam odit corrupti dolor neque dignissimos quaerat repudiandae molestias officiis distinctio
+                consequatur labore debitis nobis!</p>
+        </section>
+        <section>
+            <h1>I'm another heading</h1>
+
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam, pariatur? Suscipit asperiores id enim
+                nobis
+                recusandae laborum tempore minus nesciunt maxime adipisci eos reprehenderit assumenda, repudiandae
+                quaerat
+                obcaecati ipsa autem hic in temporibus ipsam quod! Quisquam vel amet, iste ipsum at ullam doloribus
+                quasi,
+                provident rem maxime delectus cupiditate fuga.</p>
+        </section>
+    </main>
 </body>
 
 </html>
