--- a/assignments/CSS Class/CSSclass.html
+++ b/assignments/CSS Class/CSSclass.html
@@ -9,11 +9,13 @@
 </head>
 
 <body>
+    <main>
     <h1 class="cool">I'm a cool header</h1>
     <h1 class="boring">I'm a boring header</h1>
     <h1 class="cool">I'm also a cool header</h1>
     <h1 class="boring">I'm a boring header</h1>
     <h1 class="cool">I'm a very cool header</h1>
+</main>
 </body>
 
 </html>
