--- a/assignments/Three CSS Classes/threeCSSclasses.html
+++ b/assignments/Three CSS Classes/threeCSSclasses.html
@@ -9,20 +9,22 @@
 </head>
 
 <body>
-    <h1 class="light">Light Heading</h1>
-    <h1 class="light">Another Light Heading</h1>
+    <main>
+        <h1 class="light">Light Heading</h1>
+        <h1 class="light">Another Light Heading</h1>
 
-    <h1 class="dark">Dark Heading</h1>
-    <h1 class="dark">Another Dark Heading</h1>
+        <h1 class="dark">Dark Heading</h1>
+        <h1 class="dark">Another Dark Heading</h1>
 
-    <h1 class="new">New Heading </h1>
-    <h1 class="new">Another New Heading </h1>
+        <h1 class="new">New Heading </h1>
+        <h1 class="new">Another New Heading </h1>
 
-    <h1 class="light new">Light New Heading </h1>
-    <h1 class="light new">Another Light New Heading </h1>
+        <h1 class="light new">Light New Heading </h1>
+        <h1 class="light new">Another Light New Heading </h1>
 
-    <h1 class="dark new">Dark New Heading </h1>
-    <h1 class="dark new">Another Dark New Heading </h1>
+        <h1 class="dark new">Dark New Heading </h1>
+        <h1 class="dark new">Another Dark New Heading </h1>
+    </main>
 </body>
 
 </html>
