--- a/assignments/Classes and IDs/classes-ids.html
+++ b/assignments/Classes and IDs/classes-ids.html
@@ -9,9 +9,11 @@
 </head>
 
 <body>
-    <h1 id="main-title">Web Development</h1>
-    <h1 class="title">Digital Marketing with AI</h1>
-    <h1 class="title">UI/UX Creative Designer</h1>
+    <main>
+        <h1 id="main-title">Web Development</h1>
+        <h1 class="title">Digital Marketing with AI</h1>
+        <h1 class="title">UI/UX Creative Designer</h1>
+    </main>
 </body>
 
 </html>
