--- a/assignments/Favorite Celebrity/FavoriteCelebrity.html
+++ b/assignments/Favorite Celebrity/FavoriteCelebrity.html
@@ -33,65 +33,67 @@
     <main>
 
         <section>
+            <article>
 
-            <center>
-                <table width="60%" border="1">
+                <center>
+                    <table width="60%" border="1">
 
-                    <tr>
-                        <th>Born</th>
-                        <td>Selena Marie Gomez
-                            July 22, 1992 (age 31) <br>
-                            Grand Prairie, Texas, U.S.</td>
+                        <tr>
+                            <th>Born</th>
+                            <td>Selena Marie Gomez
+                                July 22, 1992 (age 31) <br>
+                                Grand Prairie, Texas, U.S.</td>
 
-                    </tr>
-                    <tr>
-                        <th>Occupations</th>
-                        <td>Singer, songwriter, actress, producer, businesswoman</td>
-                    </tr>
-                    <tr>
-                        <th>Years active</th>
-                        <td>2002-present</td>
-                    </tr>
-                    <tr>
-                        <th>Works</th>
-                        <td>Discography, songs recorded, performances ,videography</td>
-                    </tr>
+                        </tr>
+                        <tr>
+                            <th>Occupations</th>
+                            <td>Singer, songwriter, actress, producer, businesswoman</td>
+                        </tr>
+                        <tr>
+                            <th>Years active</th>
+                            <td>2002-present</td>
+                        </tr>
+                        <tr>
+                            <th>Works</th>
+                            <td>Discography, songs recorded, performances ,videography</td>
+                        </tr>
 
-                    <tr>
+                        <tr>
 
-                        <th>Title </th>
-                        <td>Founder, chairwoman, and owner of Rare Beauty</td>
-                    </tr>
-                    <tr>
-                        <th>Awards</th>
-                        <td>Full list</td>
-                    </tr>
-                    <tr>
-                        <th colspan="2">Musical career</th>
-                    </tr>
-                    <tr>
-                        <th>Genres </th>
-                        <td>Popdance-popelectropop</td>
-                    </tr>
-                    <tr>
-                        <th>Instrument(s)</th>
-                        <td>Vocals</td>
-                    </tr>
-                    <tr>
-                        <th>Labels </th>
-                        <td>Walt Disney, Hollywood, Interscope</td>
-                    </tr>
-                    <tr>
-                        <th>Formerly of </th>
-                        <td>Selena Gomez & the Scene</td>
-                    </tr>
-                    <tr>
-                        <th>Website</th>
-                        <td><a href="https://www.selenagomez.com/#/" target="_blank">selenagomez.com</a></td>
-                    </tr>
+                            <th>Title </th>
+                            <td>Founder, chairwoman, and owner of Rare Beauty</td>
+                        </tr>
+                        <tr>
+                            <th>Awards</th>
+                            <td>Full list</td>
+                        </tr>
+                        <tr>
+                            <th colspan="2">Musical career</th>
+                        </tr>
+                        <tr>
+                            <th>Genres </th>
+                            <td>Popdance-popelectropop</td>
+                        </tr>
+                        <tr>
+                            <th>Instrument(s)</th>
+                            <td>Vocals</td>
+                        </tr>
+                        <tr>
+                            <th>Labels </th>
+                            <td>Walt Disney, Hollywood, Interscope</td>
+                        </tr>
+                        <tr>
+                            <th>Formerly of </th>
+                            <td>Selena Gomez & the Scene</td>
+                        </tr>
+                        <tr>
+                            <th>Website</th>
+                            <td><a href="https://www.selenagomez.com/#/" target="_blank">selenagomez.com</a></td>
+                        </tr>
 
 
-                </table>
+                    </table>
+            </article>
         </section>
 
         </center>
@@ -128,8 +130,8 @@
                     channel&apos;s leading ingenue, Miley Cyrus.
                 </p>
             </article>
-        </section>
-        <section>
+
+
             <article>
                 <h3>Personal life</h3>
 
@@ -153,18 +155,19 @@
                     their wellbeing, seek help when needed, and embrace their own authenticity.
                 </p>
             </article>
-        </section> <br>
-        <section>
-            <ul>
-                <h3>Some interesting facts about Selena Gomez.</h3>
-                <li>She was named after the iconic Tejano singer Selena.</li>
-                <li>The only social media app Gomez has on her phone is TikTok.</li>
-                <li>She adores Britney Spears, using the entertainer's iconic moments as inspirations for her own
-                    performances.
-                </li>
-                <li>She wrote the hit track "Lose You to Love Me" in 45 minutes.</li>
-                <li>Gomez loves McDonald's. Loves it.</li>
-                <li>Gomez views her "Only Murders in the Building" costars as grandpa-type figures.</li>
+            <br>
+            <article>
+                <ul>
+                    <h3>Some interesting facts about Selena Gomez.</h3>
+                    <li>She was named after the iconic Tejano singer Selena.</li>
+                    <li>The only social media app Gomez has on her phone is TikTok.</li>
+                    <li>She adores Britney Spears, using the entertainer's iconic moments as inspirations for her own
+                        performances.
+                    </li>
+                    <li>She wrote the hit track "Lose You to Love Me" in 45 minutes.</li>
+                    <li>Gomez loves McDonald's. Loves it.</li>
+                    <li>Gomez views her "Only Murders in the Building" costars as grandpa-type figures.</li>
+            </article>
             </ul>
         </section>
 
@@ -228,39 +231,41 @@
                 <img src="images/foryou.png" alt="Album" width="200" height="200">
             </figure>
             <br><br><br>
-            <center>
-                <table border="2">
-                    <tr>
-                        <th>Album Title</th>
-                        <th>Release Date</th>
-                        <th>Genre</th>
-                        <th>Number of Songs</th>
-                    </tr>
-                    <tr>
-                        <td>Love You Like a Love Song and More</td>
-                        <td>June 22, 2011</td>
-                        <td>Pop</td>
-                        <td>12 songs</td>
-                    </tr>
-                    <tr>
-                        <td>Rare</td>
-                        <td>January 10, 2020</td>
-                        <td>Pop</td>
-                        <td>13 songs</td>
-                    </tr>
-                    <tr>
-                        <td>Revival</td>
-                        <td>October 9, 2015</td>
-                        <td>Pop</td>
-                        <td>11 songs</td>
-                    </tr>
-                    <tr>
-                        <td>For You</td>
-                        <td>November 24, 2014</td>
-                        <td>Pop</td>
-                        <td>16 songs</td>
-                    </tr>
-                </table>
+            <article>
+                <center>
+                    <table border="2">
+                        <tr>
+                            <th>Album Title</th>
+                            <th>Release Date</th>
+                            <th>Genre</th>
+                            <th>Number of Songs</th>
+                        </tr>
+                        <tr>
+                            <td>Love You Like a Love Song and More</td>
+                            <td>June 22, 2011</td>
+                            <td>Pop</td>
+                            <td>12 songs</td>
+                        </tr>
+                        <tr>
+                            <td>Rare</td>
+                            <td>January 10, 2020</td>
+                            <td>Pop</td>
+                            <td>13 songs</td>
+                        </tr>
+                        <tr>
+                            <td>Revival</td>
+                            <td>October 9, 2015</td>
+                            <td>Pop</td>
+                            <td>11 songs</td>
+                        </tr>
+                        <tr>
+                            <td>For You</td>
+                            <td>November 24, 2014</td>
+                            <td>Pop</td>
+                            <td>16 songs</td>
+                        </tr>
+                    </table>
+            </article>
 
             </center>
         </section>
@@ -303,19 +308,21 @@
                     artist, making her one of the most influential figures in the music industry today.</p>
                 <br>
             </article>
-            <h4>Top 10 Selena Gomez Songs</h4>
-            <ol>
-                <li>“Love You Like A Love Song”</li>
-                <li>“Come & Get It”</li>
-                <li>“Same Old Love”</li>
-                <li>“Calm Down” with Rema</li>
-                <li>“The Heart Wants What It Wants”</li>
-                <li>“Hands To Myself”</li>
-                <li>“Slow Down”</li>
-                <li>“Good For You” feat. A$AP Rocky</li>
-                <li>"Lose You to Love Me"</li>
-                <li>“My Mind & Me”</li>
-            </ol>
+            <article>
+                <h4>Top 10 Selena Gomez Songs</h4>
+                <ol>
+                    <li>“Love You Like A Love Song”</li>
+                    <li>“Come & Get It”</li>
+                    <li>“Same Old Love”</li>
+                    <li>“Calm Down” with Rema</li>
+                    <li>“The Heart Wants What It Wants”</li>
+                    <li>“Hands To Myself”</li>
+                    <li>“Slow Down”</li>
+                    <li>“Good For You” feat. A$AP Rocky</li>
+                    <li>"Lose You to Love Me"</li>
+                    <li>“My Mind & Me”</li>
+                </ol>
+            </article>
         </section>
 
         <section>
