--- a/projects/Final Project/Home.html
+++ b/projects/Final Project/Home.html
@@ -27,70 +27,77 @@
 
     <main>
         <section>
-            <h2>Who is <ins>Rinesa Zylfiu?</ins> </h2>
+            <article>
+                <h2>Who is <ins>Rinesa Zylfiu?</ins> </h2>
 
-            <figure> <img src="images/girl.webp" alt="RinesaZylfiu" title="Rinesa Zylfiu" width="40%"></figure>
+                <figure> <img src="images/girl.webp" alt="RinesaZylfiu" title="Rinesa Zylfiu" width="40%"></figure>
 
-            <p>
-                My name is Rinesa Zylfiu and I am currently studying Computer Science and Engineering.
-                I am 21 years old, I live in the city of Gjilan.
-                I am passionate about technology and the limitless possibilities it offers.
-                Through my studies, I strive to gain knowledge and skills that will enable me to contribute to the
-                ever-evolving field of Computer Science.
-            </p>
+                <p>
+                    My name is Rinesa Zylfiu and I am currently studying Computer Science and Engineering.
+                    I am 21 years old, I live in the city of Gjilan.
+                    I am passionate about technology and the limitless possibilities it offers.
+                    Through my studies, I strive to gain knowledge and skills that will enable me to contribute to the
+                    ever-evolving field of Computer Science.
+                </p>
 
+            </article>
         </section>
         <section>
-            <h2>Education</h2>
+            <article>
+                <h2>Education</h2>
 
-            <ul>
-                <li>Primary School:
-                    <ul>
-                        <li><b>Thimi Mitko</b>(2009-2018)</li>
-                    </ul>
-                </li>
-                <li>High School: <b>Xhavit Ahmeti</b>(2018-2021)</li>
-                <li>University:
-                    <ul>
-                        <li>Bachelos`s degree in <b>Computer Science</b> from the <em>University of Bussines and
-                                Technoology</em>(2021-2024)</li>
-                    </ul>
-                </li>
-            </ul>
+                <ul>
+                    <li>Primary School:
+                        <ul>
+                            <li><b>Thimi Mitko</b>(2009-2018)</li>
+                        </ul>
+                    </li>
+                    <li>High School: <b>Xhavit Ahmeti</b>(2018-2021)</li>
+                    <li>University:
+                        <ul>
+                            <li>Bachelos`s degree in <b>Computer Science</b> from the <em>University of Bussines and
+                                    Technoology</em>(2021-2024)</li>
+                        </ul>
+                    </li>
+                </ul>
+            </article>
         </section>
         <section>
-            <h2>My Skills</h2>
-            <table border="1">
-                <tr>
-                    <th>#</th>
-                    <th>Englisht Language</th>
-                    <th>Mathematics</th>
-                    <th>HTML5</th>
-                    <th>CSS3</th>
-                    <th>JavaScript</th>
-                    <th>Networking</th>
-                </tr>
-                <tr>
-                    <th>Rating</th>
-                    <td>10.0</td>
-                    <td>10.0</td>
-                    <td>10.0</td>
-                    <td>10.0</td>
-                    <td>10.0</td>
-                    <td>10.0</td>
-                </tr>
-            </table>
+            <article>
+                <h2>My Skills</h2>
+                <table border="1">
+                    <tr>
+                        <th>#</th>
+                        <th>Englisht Language</th>
+                        <th>Mathematics</th>
+                        <th>HTML5</th>
+                        <th>CSS3</th>
+                        <th>JavaScript</th>
+                        <th>Networking</th>
+                    </tr>
+                    <tr>
+                        <th>Rating</th>
+                        <td>10.0</td>
+                        <td>10.0</td>
+                        <td>10.0</td>
+                        <td>10.0</td>
+                        <td>10.0</td>
+                        <td>10.0</td>
+                    </tr>
+                </table>
+            </article>
         </section>
         <section>
+            <article>
 
-            <h2>My Projects</h2>
-            <ol>
-                <li>Project 1 <a href="MyProjects.html#p1" target="_blank">&#8594;Read More</a></li>
-                <li>Project 2 <a href="MyProjects.html#p2" target="_blank">&#8594;Read More</a></li>
-                <li>Project 3 <a href="MyProjects.html#p3" target="_blank">&#8594;Read More</a></li>
-            </ol>
+                <h2>My Projects</h2>
+                <ol>
+                    <li>Project 1 <a href="MyProjects.html#p1" target="_blank">&#8594;Read More</a></li>
+                    <li>Project 2 <a href="MyProjects.html#p2" target="_blank">&#8594;Read More</a></li>
+                    <li>Project 3 <a href="MyProjects.html#p3" target="_blank">&#8594;Read More</a></li>
+                </ol>
+            </article>
         </section>
-
     </main>
 
     <footer>
