--- a/projects/Final Project/ContactMe.html
+++ b/projects/Final Project/ContactMe.html
@@ -25,23 +25,26 @@
     <main>
         <section>
             <h2>Send me a message</h2>
+            <form>
 
-            <input type="text" placeholder="Email" id="email" required><br>
+                <input type="text" placeholder="Email" id="email" required><br>
 
 
 
-            <textarea name="text" id="text" cols="50" rows="5" placeholder="What do you want to say?"></textarea>
-            <br>
-            <input type="submit" value="Send Message!">
+                <textarea name="text" id="text" cols="50" rows="5" placeholder="What do you want to say?"></textarea>
+                <br>
+                <input type="submit" value="Send Message!">
+            </form>
         </section>
         <section>
             <h2>Connect with me</h2>
 
-            <a href="https://www.facebook.com" target="_blank"><img src="images/facebook.png" alt="" width="10%"></a>
-            <a href="https://www.instagram.com" target="_blank"><img src="images/insta.webp" alt="" width="10%"></a>
-            <a href="https://www.linkedin.com" target="_blank"><img src="images/linkedin.svg" alt="" width="10%">
-                </figure></a>
-
+            <figure> <a href="https://www.facebook.com" target="_blank"><img src="images/facebook.png" alt=""
+                        width="10%"></a>
+                <a href="https://www.instagram.com" target="_blank"><img src="images/insta.webp" alt="" width="10%"></a>
+                <a href="https://www.linkedin.com" target="_blank"><img src="images/linkedin.svg" alt=""
+                        width="10%"></a>
+            </figure>
         </section>
     </main>
     <footer>All rights reserved Rinesa Zylfiu &#169;</footer>
