--- a/assignments/Classes and IDs/classes-ids.html
+++ b/assignments/Classes and IDs/classes-ids.html
@@ -10,9 +10,11 @@
 
 <body>
     <main>
+        <section>
         <h1 id="main-title">Web Development</h1>
         <h1 class="title">Digital Marketing with AI</h1>
         <h1 class="title">UI/UX Creative Designer</h1>
+    </section>
     </main>
 </body>
 
