--- a/assignments/Pop-quiz/answers.html
+++ b/assignments/Pop-quiz/answers.html
@@ -15,8 +15,8 @@
 </head>
 
 <body>
-    <h1>All Answers</h1>
-
+    <header> <h1>All Answers</h1></header>
+<main>
     <ol>
         <li id="a1">How many Infinity Stones are there?<a href="page_1.html#q1">Back to Questions</a>
             <ol type="A">
@@ -343,6 +343,7 @@
 
 
     </ol>
+</main>
 </body>
 
 </html>
