--- a/assignments/Pop-quiz/page_1.html
+++ b/assignments/Pop-quiz/page_1.html
@@ -14,8 +14,8 @@
 </head>
 
 <body>
-    <h1>Questions-Page 1</h1>
-
+   <header> <h1>Questions-Page 1</h1></header>
+<main>
     <ol>
         <li id="q1">How many Infinity Stones are there? <a href="answers.html#a1">Check Answer</a>
             <ol type="A">
@@ -121,9 +121,9 @@
         </li>
     </ol>
 
+</main>
 
-
-    <a href="page_2.html">Next Page</a>
+ <footer>  <a href="page_2.html">Next Page</a></footer> 
 
 
 </body>
