--- a/assignments/Pop-quiz/page_2.html
+++ b/assignments/Pop-quiz/page_2.html
@@ -15,7 +15,8 @@
 
 
 <body>
-    <h1>Questions-Page 2</h1>
+  <header>  <h1>Questions-Page 2</h1></header>
+  <main>
     <ol start="11">
         <li id="q11">What type of food holds the world record for being the most stolen around the globe? <a
                 href="answers.html#a11">Check Answer</a>
@@ -124,10 +125,11 @@
         </li>
     </ol>
 
-
+</main>
+<footer>
     <a href="page_1.html">Previous Page</a> |
     <a href="page_3.html">Next Page</a>
-
+</footer>
 </body>
 
 </html>
