--- a/assignments/Pop-quiz/page_3.html
+++ b/assignments/Pop-quiz/page_3.html
@@ -15,7 +15,8 @@
 
 <body>
 
-    <h1>Questions-Page 3</h1>
+   <header> <h1>Questions-Page 3</h1></header>
+   <main>
     <ol start="21">
         <li id="q21">Which pop star burnt down her home gym with candles? <a href="answers.html#a21">Check Answer</a>
             <ol type="A">
@@ -122,8 +123,10 @@
         </li>
     </ol>
 
-
+</main>
+<footer>
     <a href="page_2.html">Previous Page</a>
+</footer>
 </body>
 
 </html>
