--- a/assignments/Personal Portofolio/projects.html
+++ b/assignments/Personal Portofolio/projects.html
@@ -27,7 +27,7 @@
     <main>
         <section>
             <article class="project1">
-                <h2>Project 1</h2>
+                <h2 id="p1">Project 1</h2>
 
                 <figure><img src="images/tiktok.png" alt="Tiktok" class="imgpro"></figure>
 
@@ -41,7 +41,7 @@
 
         <section>
             <article class="project2">
-                <h2>Project 2</h2>
+                <h2 id="p2">Project 2</h2>
                 <figure>
                     <img src="images/pinterest.png" alt="Pinterest" class="imgpro">
                 </figure>
@@ -56,7 +56,7 @@
 
         <section>
             <article class="project3">
-                <h2>Project 3</h2>
+                <h2 id="p3">Project 3</h2>
 
                 <figure>
                     <img src="images/asos.png" alt="Asos" class="imgpro">
